// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple Items should have 3 active slides 1`] = `
"<div>
    <h2> Multiple items </h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div aria-labelledby=\\"slickSliderLabel slickSliderInst\\" role=\\"list\\" class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"-3\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"-2\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"0\\" role=\\"listitem\\" class=\\"slick-slide slick-active slick-current\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"1\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"2\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"3\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"4\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"5\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"6\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"7\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"8\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"9\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"10\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"11\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"12\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"13\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"14\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"15\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"16\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"17\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"slick-active\\"><button>1</button></li>
            <li class=\\"\\"><button>2</button></li>
            <li class=\\"\\"><button>3</button></li>
        </ul>
    </div>
</div>"
`;

exports[`Multiple Items should have 3 dots 1`] = `
"<div>
    <h2> Multiple items </h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div aria-labelledby=\\"slickSliderLabel slickSliderInst\\" role=\\"list\\" class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"-3\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"-2\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"0\\" role=\\"listitem\\" class=\\"slick-slide slick-active slick-current\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"1\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"2\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"3\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"4\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"5\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"6\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"7\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"8\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"9\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"10\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"11\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"12\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"13\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"14\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"15\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"16\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"17\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"slick-active\\"><button>1</button></li>
            <li class=\\"\\"><button>2</button></li>
            <li class=\\"\\"><button>3</button></li>
        </ul>
    </div>
</div>"
`;

exports[`Multiple Items should have 9 actual slides and (3(pre) + 9(post)) clone slides 1`] = `
"<div>
    <h2> Multiple items </h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div aria-labelledby=\\"slickSliderLabel slickSliderInst\\" role=\\"list\\" class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"-3\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"-2\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"0\\" role=\\"listitem\\" class=\\"slick-slide slick-active slick-current\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"1\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"2\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"3\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"4\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"5\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"6\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"7\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"8\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"9\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"10\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"11\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"12\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"13\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"14\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"15\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"16\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"17\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"slick-active\\"><button>1</button></li>
            <li class=\\"\\"><button>2</button></li>
            <li class=\\"\\"><button>3</button></li>
        </ul>
    </div>
</div>"
`;

exports[`Multiple Items should show first 3 slides 1`] = `
"<div>
    <h2> Multiple items </h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div aria-labelledby=\\"slickSliderLabel slickSliderInst\\" role=\\"list\\" class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"-3\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"-2\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"0\\" role=\\"listitem\\" class=\\"slick-slide slick-active slick-current\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"1\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"2\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"3\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"4\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"5\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"6\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"7\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"8\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"9\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"10\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"11\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"12\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"13\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"14\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"15\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"16\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"17\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"slick-active\\"><button>1</button></li>
            <li class=\\"\\"><button>2</button></li>
            <li class=\\"\\"><button>3</button></li>
        </ul>
    </div>
</div>"
`;

exports[`Multiple Items should show last 3 slides when last dot is clicked 1`] = `
"<div>
    <h2> Multiple items </h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div aria-labelledby=\\"slickSliderLabel slickSliderInst\\" role=\\"list\\" class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"-3\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>7</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"-2\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>8</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>9</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"0\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"1\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"2\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"3\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"4\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"5\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"6\\" role=\\"listitem\\" class=\\"slick-slide slick-active slick-current\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>7</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"7\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>8</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"8\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>9</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"9\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"10\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"11\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"12\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"13\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"14\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"15\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>7</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"16\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>8</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"17\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>9</h3>
                        </div>
                    </div>
                </div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"\\"><button>1</button></li>
            <li class=\\"\\"><button>2</button></li>
            <li class=\\"slick-active\\"><button>3</button></li>
        </ul>
    </div>
</div>"
`;

exports[`Multiple Items should show last 3 slides when previous button is clicked 1`] = `
"<div>
    <h2> Multiple items </h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div aria-labelledby=\\"slickSliderLabel slickSliderInst\\" role=\\"list\\" class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"-3\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>7</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"-2\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>8</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>9</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"0\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"1\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"2\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"3\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"4\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"5\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"6\\" role=\\"listitem\\" class=\\"slick-slide slick-active slick-current\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>7</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"7\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>8</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"8\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>9</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"9\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"10\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"11\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"12\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"13\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"14\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"15\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>7</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"16\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>8</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"17\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>9</h3>
                        </div>
                    </div>
                </div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"\\"><button>1</button></li>
            <li class=\\"\\"><button>2</button></li>
            <li class=\\"slick-active\\"><button>3</button></li>
        </ul>
    </div>
</div>"
`;

exports[`Multiple Items should show slides first 3 slides when middle dot is clicked 1`] = `
"<div>
    <h2> Multiple items </h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div aria-labelledby=\\"slickSliderLabel slickSliderInst\\" role=\\"list\\" class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"-3\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"-2\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"0\\" role=\\"listitem\\" class=\\"slick-slide slick-active slick-current\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"1\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"2\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"3\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"4\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"5\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"6\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"7\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"8\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"9\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"10\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"11\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"12\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"13\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"14\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"15\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"16\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"17\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"slick-active\\"><button>1</button></li>
            <li class=\\"\\"><button>2</button></li>
            <li class=\\"\\"><button>3</button></li>
        </ul>
    </div>
</div>"
`;

exports[`Multiple Items should show slides from 4 to 6 when middle dot is clicked 1`] = `
"<div>
    <h2> Multiple items </h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div aria-labelledby=\\"slickSliderLabel slickSliderInst\\" role=\\"list\\" class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"-3\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"-2\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"0\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"1\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"2\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"3\\" role=\\"listitem\\" class=\\"slick-slide slick-active slick-current\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"4\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"5\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"6\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"7\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"8\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"9\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"10\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"11\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"12\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"13\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"14\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"15\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"16\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"17\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"\\"><button>1</button></li>
            <li class=\\"slick-active\\"><button>2</button></li>
            <li class=\\"\\"><button>3</button></li>
        </ul>
    </div>
</div>"
`;

exports[`Multiple Items should show slides from 4 to 6 when next button is clicked 1`] = `
"<div>
    <h2> Multiple items </h2>
    <div class=\\"slick-slider slick-initialized\\" dir=\\"ltr\\"><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-prev\\" style=\\"display: block;\\"> Previous</button>
        <div class=\\"slick-list\\">
            <div aria-labelledby=\\"slickSliderLabel slickSliderInst\\" role=\\"list\\" class=\\"slick-track\\" style=\\"opacity: 1;\\">
                <div data-index=\\"-3\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"-2\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"-1\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"0\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"1\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"2\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"3\\" role=\\"listitem\\" class=\\"slick-slide slick-active slick-current\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"4\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"5\\" role=\\"listitem\\" class=\\"slick-slide slick-active\\" style=\\"outline: none; width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"6\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"7\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"8\\" role=\\"listitem\\" class=\\"slick-slide\\" style=\\"outline: none; width: 0px;\\"></div>
                <div data-index=\\"9\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>1</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"10\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>2</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"11\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>3</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"12\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>4</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"13\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>5</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"14\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\">
                    <div>
                        <div style=\\"width: 100%; display: inline-block;\\">
                            <h3>6</h3>
                        </div>
                    </div>
                </div>
                <div data-index=\\"15\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"16\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
                <div data-index=\\"17\\" class=\\"slick-slide slick-cloned\\" aria-hidden=\\"true\\" style=\\"width: 0px;\\"></div>
            </div>
        </div><button type=\\"button\\" data-role=\\"none\\" class=\\"slick-arrow slick-next\\" style=\\"display: block;\\"> Next</button>
        <ul style=\\"display: block;\\" class=\\"slick-dots\\">
            <li class=\\"\\"><button>1</button></li>
            <li class=\\"slick-active\\"><button>2</button></li>
            <li class=\\"\\"><button>3</button></li>
        </ul>
    </div>
</div>"
`;
